--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,22 @@
 {
     "name": "doctorsender/webservice",
-    "description": "Api to controll doctorsender service"
+    "description": "Api to controll doctorsender service",
+    "keywords": [
+        "doctorsender",
+        "api",
+        "webservice",
+        "mailing",
+        "mail",
+        "marketing"
+    ],
+    "homepage": "https://github.com/doctorsender/webservice",
+    "license": "Apache2",
+    "require": {
+        "php": ">=5.3.2",
+        "symfony/framework-bundle": ">=2.0.0"
+    },
+    "target-dir": "Doctorsender/APIBundle",
+    "autoload": {
+        "psr-4": {"Doctorsender\\": "APIBundle"}
+    }
 }
