psr update target dir

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,9 @@
         "symfony/framework-bundle": ">=2.0.0"
     },
     "autoload": {
-        "psr-4": {"Doctorsender\\": "APIBundle"}
+        "autoload": {
+            "psr-0": { "Doctorsender\\APIBundle": "" }
+        },
+        "target-dir": "Doctorsender/APIBundle"
     }
 }
