--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,6 @@
         "symfony/framework-bundle": ">=2.0.0"
     },
     "autoload": {
-        "psr-4": {"Doctorsender\\APIBundle": "Doctorsender/APIBundle"}
+        "psr-4": {"Doctorsender\\APIBundle\\": "Doctorsender/APIBundle"}
     }
 }
